--- a/services.html
+++ b/services.html
@@ -22,25 +22,25 @@
 
     <div class="photo"><img src="menulogo.png"></div>
     <div class="text">CorpOne</div>
-<div class="naver">
-    <!--<nav class="nav">-->
-<!--<ul class="nav-list" >-->
-    <!--<li class="active"><a href="home.html">HOME</a></li>-->
-    <!--<li class="active"><a href="firm-profile.html" >FIRM PROFILE</a></li>-->
-    <!--<li class="active"><a href="services.html" >SERVICES</a></li>-->
-    <!--<li class="active"><a href="projects.html" >PROJECTS</a></li>-->
-    <!--<li class="active"><a href="contact.html" >CONTACT</a></li>-->
-<!--</ul>-->
 
-    <!--</nav>-->
+<div class="naver">
+
+
      <nav class="nav">
+         <button id='bodr' >
+        <span class="boder"></span>
+        <span class="boder"></span>
+        <span class="boder"></span>
+    </button>
+
       <ul class="nav-list">
         <li class="nav-item"><a href="?=home">HOME</a></li>
         <li class="nav-item"><a href="?=about">FIRM PROFILE</a></li>
-        <li class="nav-item active"><a href="?=services">SERVICES</a></li>
+        <li class="nav-item active"><a id="f" href="?=services">SERVICES</a></li>
         <li class="nav-item"><a href="?=portfolio">PROJECTS</a></li>
         <li class="nav-item"><a href="?=testimonials">CONTACT</a></li>
       </ul>
+
     </nav>
 </div>
 </div>
@@ -217,16 +217,6 @@
 <div class="bottom_font">Copyright  2016.Company name All rights reserved.<p>网页模板</p ></div>
 </div>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="arr.js"></script>
-
-<script>
-    var _gaq=[['_setAccount','UA-20440416-10'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src='//www.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)})(document,'script');
-</script>
 
 </body>
 </html>
