--- a/services.html
+++ b/services.html
@@ -176,7 +176,8 @@
       </div>
 </div>
     <div class="bottom_list">
-    <div class="small_bottom_list">
+        <div class="small_list">
+    <div class="small_bottom_list  ">
     <h2>NAVIGATION</h2>
     <div class="list_font">Home</div>
     <div class="list_font">Firm Profile</div>
@@ -184,7 +185,8 @@
     <div class="list_font">Events</div>
     <div class="list_font">Contact</div>
 </div>
-<div class="small_bottom_list">
+
+        <div class="small_bottom_list ">
     <h2>SERVICES</h2>
     <div class="list_font">Client Searvices</div>
     <div class="list_font D">Economic Consulting</div>
@@ -192,7 +194,8 @@
     <div class="list_font D">Technology Consulting</div>
     <div class="list_font">Executive search</div>
 </div>
-<div class="small_bottom_list">
+            </div>
+<div class="small_bottom_list small_list">
     <h2>ARCHIVES</h2>
     <div class="list_font_s">July 2014</div>
     <div class="list_font_s">Sep 2014</div>
@@ -200,7 +203,7 @@
     <div class="list_font_s">March 2015</div>
     <div class="list_font_s">June 2015</div>
 </div>
-<div class="small_bottom_list">
+<div class="small_bottom_list small_list1">
     <h2>RECENT POSTS</h2>
     <div class="list_font_s">Arenean Nonummy</div>
     <div class="list_font_s">Hendrerit Mauselntes</div>
